--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: msbuild
+      uses: microsoft/setup-msbuild@v1.1
+
     - name: Windows, generating Makefiles
-      if: runner.os == 'Windows'
       shell: cmd
       run: |
         git submodule init
@@ -28,5 +30,5 @@ jobs:
       with:
         name: package-win32.vs140
         path: ./output.vs140/*
-        
+
 
