--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,11 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest]
+
     steps:
     - uses: actions/checkout@v2
 
-    - name: msbuild
-      uses: microsoft/setup-msbuild@v1.1
+    - uses: ilammy/msvc-dev-cmd@v1
 
     - name: Windows, generating Makefiles
       shell: cmd
