--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,27 +19,23 @@ jobs:
         Invoke-WebRequest -Method Get -Uri https://go.microsoft.com/fwlink/p/?LinkId=323507 -OutFile sdksetup.exe -UseBasicParsing
         Start-Process -Wait sdksetup.exe -ArgumentList "/q", "/norestart", "/features", "OptionId.WindowsDesktopSoftwareDevelopmentKit", "OptionId.NetFxSoftwareDevelopmentKit"
 
-    - name: Windows, generating Makefiles
+    - name: Windows, generating enviroment
       shell: cmd
       run: |
         @set PERL=c:/Strawberry/perl/bin/perl
         git submodule init
         git submodule update
-        @pushd win32port
-        call ./mk-src
-        call ./mk-static-src
-        @popd
         call ./mk-cmake --release --prime --vs140
+        choco install innosetup --version=5.6.1 --force
 
     - name: Windows, compiling
       shell: cmd
       run: |
-        ./mk-cmake --release --build --vs140
+        call ./mk-cmake --release --build --vs140
 
     - name: Windows, package
       uses: actions/upload-artifact@v2
       with:
         name: package-win32.vs140
         path: ./output.vs140/*
-
 
