--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         git submodule update
         call ./mk-cmake --release --prime --vs140
         choco install innosetup --version=5.6.1 --force
+        dir c:\tools
+        @rem dir c:\msys64
+        @rem dir c:\msys64\usr\bin
 
     - name: Windows, compiling
       shell: cmd
