--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,6 @@ jobs:
 
     - uses: ilammy/msvc-dev-cmd@v1
 
-    - name: Install Cygwin
-      uses: egor-tensin/setup-cygwin@v3
-      with:
-        platform: x64
-        packages: texinfo perl
-
     - name: Install Windows 8.1 SDK
       shell: powershell
       run: |
@@ -33,10 +27,10 @@ jobs:
         git submodule update
         call ./mk-cmake --release --prime --vs140
         choco install innosetup --version=5.6.1 --force
-        dir c:\
-        dir c:\tools
+        @rem dir c:\
+        @rem dir c:\tools
         @rem dir c:\msys64
-        dir c:\msys64\usr\bin
+        @rem dir c:\msys64\usr\bin
 
     - name: Windows, compiling
       shell: cmd
