--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
 
     - uses: ilammy/msvc-dev-cmd@v1
 
+#   - name: Install Cygwin
+#     uses: egor-tensin/setup-cygwin@v3
+#     with:
+#       platform: x64
+#       packages: perl texinfo
+
     - name: Install Windows 8.1 SDK
       shell: powershell
       run: |
