--- a/win32port/Aspell.iss.in
+++ b/win32port/Aspell.iss.in
@@ -28,24 +28,24 @@ Name: "sendtoicon";  Description: "Create a &send-to link (right click on a file
 [Files]
 
 ; Binaries
-Source: "{#OutputDir}\Release\bin\aspell.exe";                  DestDir: "{app}\bin"; CopyMode: alwaysoverwrite
-Source: "{#OutputDir}\Release\bin\word-list-compress.exe";      DestDir: "{app}\bin"; CopyMode: alwaysoverwrite
-Source: "{#OutputDir}\Release\bin\*.dll";                       DestDir: "{app}\bin"; CopyMode: alwaysoverwrite; Flags: sharedfile
+Source: "{#OutputDir}\Release\bin\aspell.exe";                  DestDir: "{app}\bin"; Flags: ignoreversion
+Source: "{#OutputDir}\Release\bin\word-list-compress.exe";      DestDir: "{app}\bin"; Flags: ignoreversion
+Source: "{#OutputDir}\Release\bin\*.dll";                       DestDir: "{app}\bin"; Flags: ignoreversion sharedfile
 
 ; Libraries
-Source: "{#OutputDir}\Release\lib\*";                           DestDir: "{app}\lib"; CopyMode: alwaysoverwrite; Flags: sharedfile
+Source: "{#OutputDir}\Release\lib\*";                           DestDir: "{app}\lib"; Flags: ignoreversion sharedfile
 
 ; Interface
-Source: "{#SourceDir}\interfaces\cc\aspell.h";                  DestDir: "{app}\include"; CopyMode: alwaysoverwrite
-Source: "{#SourceDir}\interfaces\cc\pspell.h";                  DestDir: "{app}\include"; CopyMode: alwaysoverwrite
+Source: "{#SourceDir}\interfaces\cc\aspell.h";                  DestDir: "{app}\include"; Flags: ignoreversion
+Source: "{#SourceDir}\interfaces\cc\pspell.h";                  DestDir: "{app}\include"; Flags: ignoreversion
 
 ; Documentation
-Source: "{#SourceDir}\README.md";                               DestDir: "{app}"; CopyMode: alwaysoverwrite
-Source: "{#SourceDir}\COPYING";                                 DestDir: "{app}"; CopyMode: alwaysoverwrite
+Source: "{#SourceDir}\README.md";                               DestDir: "{app}"; Flags: ignoreversion
+Source: "{#SourceDir}\COPYING";                                 DestDir: "{app}"; Flags: ignoreversion
 
-Source: "{#OutputDir}\man\*";                                   DestDir: "{app}\doc\man"; CopyMode: alwaysoverwrite
-Source: "{#OutputDir}\html\aspell\*";                           DestDir: "{app}\doc\aspell"; CopyMode: alwaysoverwrite
-Source: "{#OutputDir}\html\aspell-dev\*";                       DestDir: "{app}\doc\aspell-dev"; CopyMode: alwaysoverwrite
+Source: "{#OutputDir}\man\*";                                   DestDir: "{app}\doc\man"; Flags: ignoreversion
+Source: "{#OutputDir}\html\aspell\*";                           DestDir: "{app}\doc\aspell"; Flags: ignoreversion
+Source: "{#OutputDir}\html\aspell-dev\*";                       DestDir: "{app}\doc\aspell-dev"; Flags: ignoreversion
 
 
 [Registry]
