--- a/win32port/Aspell.iss.in
+++ b/win32port/Aspell.iss.in
@@ -12,7 +12,7 @@ AppPublisher=GNU
 AppPublisherURL=http://aspell.net
 AppSupportURL=http://mail.gnu.org/mailman/listinfo/aspell-user
 AppUpdatesURL=https://github.com/adamyg/aspell-win32
-DefaultDirName={pf}\Aspell
+DefaultDirName={pf}\@ASPELL_APPNAME@
 DefaultGroupName=Aspell
 AllowNoIcons=yes
 InfoBeforeFile=@ISS_SOURCE_DIRECTORY@\COPYING
