ci: interface tweaks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Windows, package
       shell: cmd
       run: |
-        call ./mk-cmake --vs140 --package-only
+        call ./mk-cmake --vs140 --package
         @exit 0
 
     - name: Windows, publish
