--- a/win32port/Aspell.iss.in
+++ b/win32port/Aspell.iss.in
@@ -143,7 +143,7 @@ end;
 procedure DosToUnix();
 var
         path : String;
-        data : String;
+        data : AnsiString;
 begin
         path := ExpandConstant(CurrentFileName);
         LoadStringFromFile(path, data);
