ci: package lang=en

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
       shell: cmd
       run: |
         call ./mk-cmake --vs140 --package
+        call ./mk-cmake --vs140 --lang en
         @exit 0
 
     - name: Windows, publish
