--- a/win32port/Aspell.iss.in
+++ b/win32port/Aspell.iss.in
@@ -31,6 +31,7 @@ Name: "sendtoicon";  Description: "Create a &send-to link (right click on a file
 
 ; Binaries
 Source: "{#BuildDir}\Release\bin\aspell.exe";                   DestDir: "{app}\bin"; Flags: ignoreversion
+Source: "{#BuildDir}\Release\bin\aspell-list-dicts.exe";        DestDir: "{app}\bin"; Flags: ignoreversion
 Source: "{#BuildDir}\Release\bin\word-list-compress.exe";       DestDir: "{app}\bin"; Flags: ignoreversion
 Source: "{#BuildDir}\Release\bin\*.dll";                        DestDir: "{app}\bin"; Flags: ignoreversion sharedfile
 
