--- a/msvc2015/libaspell/libaspell.vcxproj.filters
+++ b/msvc2015/libaspell/libaspell.vcxproj.filters
@@ -512,9 +512,6 @@
     <ClInclude Include="..\..\submodule\aspell\modules\speller\default\wordinfo.hpp">
       <Filter>Header Files\speller</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\win32port\dirs.h">
-      <Filter>Source Files\win32port</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\win32port\dirent.h">
       <Filter>Header Files\win32port</Filter>
     </ClInclude>
@@ -523,6 +520,9 @@
     </ClInclude>
     <ClInclude Include="..\BuildInfo.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\win32port\dirs.h">
+      <Filter>Header Files\win32port</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
