data reg tweaked

--- a/win32port/Aspell.iss.in
+++ b/win32port/Aspell.iss.in
@@ -61,7 +61,7 @@ Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: ""; ValueDa
 Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "Path"; ValueData: "{app}\bin"; Flags: uninsdeletekey
 Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "UninstallString"; ValueData: {uninstallexe}; Flags: uninsdeletekey
 
-Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "Data"; ValueData: "{app}\data"; Flags: uninsdeletekey
+Root: HKLM; Subkey: "Software\Aspell"; ValueType: string; ValueName: "Data"; ValueData: "{app}\share";
 
 ; Aspell version
 Root: HKLM; Subkey: "Software\Aspell"; ValueType: dword;  ValueName: "MajorVersion";  ValueData: "@ASPELL_VERSION_MAJOR@"; Flags: uninsdeletekey
