--- a/win32port/Dictionary.iss.in
+++ b/win32port/Dictionary.iss.in
@@ -1,6 +1,8 @@
 ;
 ; aspell - Inno Setup 0.60.x dictionaries
 ;
+; Adam Young, 2021 - 2022.
+;
 ; This file is part of the aspell-win32.
 ;
 ; Permission is hereby granted, free of charge, to any person obtaining a copy
