--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         git submodule init
         git submodule update
         call ./mk-cmake --vs140 --release --prime
+        call ./mk-cmake --vs140 -x64 --release --prime
         choco install innosetup --version=5.6.1 --force
         @rem dir c:\
         @rem dir c:\tools
@@ -42,23 +43,26 @@ jobs:
       shell: cmd
       run: |
         call ./mk-cmake --vs140 --release --build
+        call ./mk-cmake --vs140 -x64 --release --build
 
     - name: Windows, package
       shell: cmd
       run: |
         call ./mk-cmake --vs140 --package
+        call ./mk-cmake --vs140 -x64 --package
         call ./mk-cmake --vs140 --lang en
         @exit 0
-
-    - name: Windows, publish
-      uses: actions/upload-artifact@v2
-      with:
-        name: install-win32.vs140
-        path: ./installer.vs140/*
 
     - name: Windows, tarball
       uses: actions/upload-artifact@v2
       with:
         name: package-win32.vs140
         path: ./output.vs140/*
+
+    - name: Windows, release
+      uses: softprops/action-gh-release@v1
+      with:
+       files: ./installer.vs140/*
+       draft: true
+
 
