--- a/win32port/Aspell.iss.in
+++ b/win32port/Aspell.iss.in
@@ -44,6 +44,8 @@ OutputDir=@ISS_SETUP_DIRECTORY@
 
 #if "@ISS_ARCHITECTURE@"=="x64"
 #define BuildBinDir "@ISS_BUILD_DIRECTORY@/x64"
+ArchitecturesAllowed=x64
+ArchitecturesInstallIn64BitMode=x64
 OutputBaseFilename=aspell-@ASPELL_VERSION@-x64-setup
 
 #else
